# cuda_cuts

./: .gitignore  CMakeLists.txt  CudaCuts.cu  CudaCuts.h  CudaCuts_kernel.cu  Example.cu
data/: test.txt  test2.txt  test3.txt  test4.txt  test5.txt  test_gray.txt  test_gray2.txt  test_gray3.txt  test_gray4.txt  test_rect4_border.txt
